--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,10 +23,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
+                        <a class="nav-link" href="{{ path('app_recruitment_index') }}">Recruitment list</a>
+                        <a class="nav-link" href="{{ path('app_recruitment_new') }}">New Recruitment</a>
                     </div>
                 </div>
             </div>
         </nav>
+
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
